# hft-compressor

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  compile.sh
build-codex/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  hft-compressor-tests.vcxproj  hft-compressor-tests.vcxproj.filters  hft-compressor.sln  hft-compressor.vcxproj  hft-compressor.vcxproj.filters  hft_compressor_core.vcxproj  hft_compressor_core.vcxproj.filters
build-tests/: CTestTestfile.cmake  Makefile  hft-compressor  hft-compressor-tests
build-tests/Testing/Temporary/: CTestCostData.txt
doc/: CODEC_VERIFICATION_AND_REPLAY.md  LAB_FORMAT_AND_ENTROPY_SPEC.md  course_report_hft_compressor_final.docx  course_report_hft_compressor_full_draft.docx  промптбуктикер.txt  промптордербук.txt  промпттрейды.txt
include/hft_compressor/: api.hpp  c_api.h  compressor.hpp  metrics.hpp  metrics_server.hpp  pipeline.hpp  replay_decode.hpp  result.hpp  status.hpp  stream_type.hpp
python/: README.md
python/hft_compressor/: __init__.py  __main__.py  api.py
src/: c_api.cpp  compressor.cpp  decoder.cpp  format.cpp  main.cpp  metrics.cpp  metrics_server.cpp  pipeline.cpp  replay_decode.cpp  stream_type.cpp  timing.cpp  timing.hpp
src/codecs/bookticker_delta_mask/: BookTickerDeltaMask.cpp  BookTickerDeltaMask.hpp
src/codecs/brotli_jsonl_blocks/: BrotliJsonlBlocks.cpp  BrotliJsonlBlocks.hpp
src/codecs/depth_ladder_offset/: DepthLadderOffset.cpp  DepthLadderOffset.hpp  DepthLadderOffsetV2.cpp  DepthLadderOffsetV2.hpp
src/codecs/entropy_hftmac/: EntropyHftMac.cpp  EntropyHftMac.hpp
src/codecs/gzip_jsonl_blocks/: GzipJsonlBlocks.cpp  GzipJsonlBlocks.hpp
src/codecs/hftmac_common/: HftMacCommon.cpp  HftMacCommon.hpp
src/codecs/hftmac_raw_binary/: BookTicker.cpp  Depth.cpp  HftMacRawBinary.hpp  Trade.cpp
src/codecs/hftmac_varint/: BookTicker.cpp  Depth.cpp  HftMacVarint.hpp  Trade.cpp
src/codecs/lz4_jsonl_blocks/: Lz4JsonlBlocks.cpp  Lz4JsonlBlocks.hpp
src/codecs/python/: __init__.py  brotli_codec.py  bz2_codec.py  cli.py  common.py  gzip_codec.py  lz4_frame_codec.py  lzma_codec.py  registry.py  zlib_codec.py  zstandard_codec.py
src/codecs/raw_jsonl_blocks/: RawJsonlBlocks.cpp  RawJsonlBlocks.hpp
src/codecs/standard_jsonl_blocks/: StandardJsonlBlocks.cpp  StandardJsonlBlocks.hpp
src/codecs/trades_grouped_delta_qtydict/: TradesGroupedDeltaQtyDict.cpp  TradesGroupedDeltaQtyDict.hpp
src/codecs/xz_jsonl_blocks/: XzJsonlBlocks.cpp  XzJsonlBlocks.hpp
src/codecs/zstd_jsonl_blocks/: ZstdJsonlBlocks.cpp  ZstdJsonlBlocks.hpp
src/common/: CompressionInternals.cpp  CompressionInternals.hpp  timing.cpp
src/container/hfc/: format.cpp  format.hpp
src/pipelines/: PipelineBackend.cpp  PipelineBackend.hpp  PipelineRegistry.cpp
tests/: compressor_tests.cpp  python_codecs_smoke.py
